BUGFIX Admin and User line spacing and bolded titles

--- a/vroom-frontend/src/app/components/admin-dashboard/application-details/application-details.component.scss
+++ b/vroom-frontend/src/app/components/admin-dashboard/application-details/application-details.component.scss
@@ -153,3 +153,7 @@ mat-spinner {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+strong {
+  font-weight: bold;
+}
